<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MenuPrincipal">

    <TextView
        android:id="@+id/tlPrincipalMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/tlPrincipalMenu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgLogOut"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/tlPrincipalMenu"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="93dp"
        android:layout_height="69dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconprincipal" />

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="379dp"
        android:layout_height="225dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlPrincipalMenu"
        app:srcCompat="@drawable/profilecard" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="118dp"
        android:layout_height="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="@+id/imgFondo"
        app:layout_constraintTop_toTopOf="@+id/imgFondo"
        app:srcCompat="@drawable/defaultuser" />

    <TextView
        android:id="@+id/tlUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/tlUsuario"
        android:textColor="@color/textMPrincipal"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgUser"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="@+id/imgFondo"
        app:layout_constraintTop_toTopOf="@+id/imgFondo" />

    <TextView
        android:id="@+id/tlFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tlUsuario"
        android:textColor="@color/textMPrincipal"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/imgUser"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="@+id/imgFondo"
        app:layout_constraintTop_toBottomOf="@+id/tlUsuario" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="401dp"
        android:layout_height="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFondo"
        app:srcCompat="@drawable/division" />

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_button_blue"
        android:drawableBottom="@drawable/ic_camera_custom_size"
        android:gravity="center"
        android:text="@string/card_scan"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMedicamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/shape_button_yellow"
        android:drawableBottom="@drawable/ic_medicine_custom_size"
        android:gravity="center"
        android:text="@string/card_medicine"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="130dp"
        android:layout_height="113dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_button_yellow"
        android:drawableBottom="@drawable/ic_history_custom_size"
        android:gravity="center"
        android:text="@string/card_history"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsulta" />


</androidx.constraintlayout.widget.ConstraintLayout>